Add comprehensive password validation with bcrypt
- Implement validatePassword() with configurable requirements
- Add hashPassword() and verifyPassword() using bcrypt
- Update login() to enforce password validation
- Add bcrypt dependency to package.json
- Export validation utilities for reuse

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "cc-review-demo",
   "version": "1.0.0",
-  "description": "Demo authentication app for PR summary feature showcase"
+  "description": "Demo authentication app for PR summary feature showcase",
+  "dependencies": {
+    "bcrypt": "^5.1.1"
+  }
 }
